# josim-tools

./: .gitignore  .pylintrc  404.html  LICENSE.md  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg
alternatives/: index.html
configuration_file/: index.html
docs/: alternatives.md  configuration_file.md  future.md  index.md  references.md
docs/examples/: cadence_aao_dff_comparison.md
examples/cadance_aao_dff_comparison/: convert_margins_to_values.py  dff_cadence_optimized.cir  dff_cowboy_optimized.cir  dff_josim_tools_optimized.cir  dff_specification.sp  dff_starting_values.cir  margin_cadence_optimized.toml  margin_cowboy_optimized.toml  margin_josim_tools_optimized.toml  margin_josim_tools_optimized_from_starting.toml  margin_starting_values.toml  optimization.toml  run_optimization.sh  run_yield.sh  yield_cadence_optimized.toml  yield_cowboy_optimized.toml  yield_josim_tools_optimized.toml  yield_starting_values.toml
examples/cadence_aao_dff_comparison/: index.html
examples/data/: test_splitt_changed_sym.js  test_splitt_changed_sym.sp
examples/margin/: advanced_margin_analysis.toml  simple_margin_analysis.toml  (+1 more)
future/: index.html
josim_tools/: __init__.py  analysis.py  configuration.py  formats.py  optimize.py  schema.py  simulation.py  tools.py  verify.py
references/: index.html
search/: search_index.json
super_circuit_optimizer/: __init__.py  analysis.py  optimize.py  schema.py  simulation.py  verify.py
tests/: test_josim_tools.py  test_optimizer.py  test_schema.py  test_super_circuit_optimizer.py
(+8 files in other folders)
